<resources>
    <string name="app_name">Dome</string>
    <string name="thermostat">Thermostat</string>
    <string name="humidity_uppercase">Humidity</string>
    <string name="indoor_uppsercase_text">Indoor</string>
    <string name="generic_connection_error_message">Oops… Something went wrong, check your connection and try again!</string>
    <string name="snackbar_conn_error">Oops… Something went wrong. Check your connection and try again!</string>
    <string name="snackbar_update_success">Updated!</string>
    <string name="total_consumption">Today total consumption:</string>
    <string name="weekly_summary">Weekly summary:</string>
    <string name="energy_consumption">Energy Consumption</string>
    <string name="low_impact">Low</string>
    <string name="medium_impact">Medium</string>
    <string name="high_impact">High</string>
    <string name="very_high_impact">Very high</string>
    <string name="lowercase_energy_impact">energy impact</string>
    <string name="default_notification_channel_id" translatable="false">dome_notification_channel</string>
    <string name="nfc_helper">Put your device close to Dome NFC Tag</string>
    <string name="nfc_write_helper">Put your device close to Dome NFC Tag. All tag data will be lost.</string>
    <string name="join_dome_network">Join new Dome</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="currently_offline">Device offline</string>
    <string name="add_device">Add device</string>
    <string name="power_meter_title">Power Meter</string>
    <string name="drag_card_snackbar">Drag card to reorder</string>
    <string name="lampada_camera">Lampada camera</string>
    <string name="update_dev_descr">insert device description</string>
    <string name="no_devices_configured_yet_try_adding_new_one_or_join_new_dome_from_menu">No devices configured yet. Try adding new one or join new Dome from menu.</string>
    <string name="switch_on">Switch on</string>
    <string name="switch_off">Switch off</string>
    <string name="join_dome_network_title">Join Dome network</string>
    <string name="error_reading_tag_sb">Error reading Dome Tag</string>
    <string name="join_alert_msg">You are about to join \"%s\" environment. App will be restarted. Continue?</string>
    <string name="no_nfc_capabilities">NO NFC Capabilities</string>
    <string name="device_details">Details</string>
    <string name="device_id_info">Device ID: DomeDevice-%s</string>
    <string name="device_sub_info">Device sub topic: dome/%s/%s</string>
    <string name="device_pub_info">Device pub topic: dome/%s</string>
    <string name="advanced_informations">Advanced information</string>
    <string name="select_port_pref">Select MQTT port</string>
    <string name="setup_broker_pref">Set up Dome MQTT broker</string>
    <string name="select_username_pref">Select MQTT username</string>
    <string name="power_rating_pref">Set your house power rating (Watts)</string>
    <string name="change_pass_pref">Change MQTT password</string>
    <string name="notification_pref">Receive a notification if you exceed your energy provider maximum allowed power</string>
    <string name="thermostat_notification_pref">Receive a notification if you forget heating on</string>
    <string name="notification_time_pref">Set heating reminders time (HH:MM)</string>
    <string name="help_pref">Help</string>
    <string name="techincal_issues_pref">Report technical issues or suggest new features</string>
    <string name="about_pref">About</string>
    <string name="about_pref_desc">App version, credits, contact information</string>
    <string name="advanced_pref">Advanced</string>
    <string name="enviroment_select_pref">Join new Dome manually (expert)</string>
    <string name="enviroment_select_title_pref">Dome environment</string>
    <string name="send_feedback_pref">Send feedback</string>
    <string name="thermostat_category_pref">Thermostat</string>
    <string name="power_category_pref">Power Meter</string>
    <string name="max_power_pref">Max Power</string>
    <string name="mqtt_port_pref">MQTT Port</string>
    <string name="mqtt_broker_pref">MQTT Broker</string>
    <string name="humidity_cardview">Humidity: %.1f%%</string>
    <string name="temperature_cardview">Temperature: %.1f°C</string>
    <string name="power_cardview">Power: %.1fW</string>
    <string name="chartbar_kwh" translatable="false">%.2f kWh</string>
    <string name="change_dome_menu">Change Dome</string>
    <string name="item_deleted_msg">Item Deleted</string>
    <string name="delete_device_error">Cannot delete online device, disconnect it first!</string>
    <string name="select_house_dialog_title">Select house</string>
    <string name="house_selection_text">Environment %d: %s</string>
    <string name="configuration_failed">Configuration failed</string>
    <string name="try_again">Try again</string>
    <string name="success_msg">Success!</string>
    <string name="success_info">Device configuration succeeded. Wait for Dome board to restart.</string>
    <string name="great_button">Great!</string>
    <string name="nfc_write_success">Write Successful!</string>
    <string name="nfc_write_success_msg">Dome write tag was successful!</string>
    <string name="no_nfc_detected">No NFC detected!</string>
    <string name="nfc_disabled_sb">NFC not enabled :(</string>
    <string name="enable_nfc_sbbutton">Turn on</string>
    <string name="mywifipassword" translatable="false">MyWiFiPassword</string>
    <string name="mywifissid" translatable="false">MyWiFiSSID</string>
    <string name="configure_device">Configure Device</string>
    <string name="next_step">Next step</string>
    <string name="_4_tap_on_configure_device_button_below">4. Tap on Configure Device button below</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>