<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionChange"
        android:icon="@drawable/ic_outline_change_circle_24"
        android:title="@string/change_dome_menu"
        app:showAsAction="withText|collapseActionView"
        />

    <item
        android:id="@+id/actionJoin"
        android:icon="@drawable/outline_sensors_24"
        android:title="@string/join_dome_network"
        app:showAsAction="withText|collapseActionView"
        />

    <item
        android:id="@+id/actionAddDevice"
        android:icon="@drawable/outline_playlist_add_24"
        android:title="@string/add_device"
        android:orderInCategory="100"
        app:showAsAction="withText|collapseActionView"
        />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/cog_outline"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="withText|collapseActionView"
        />

</menu>