<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:ignore="UselessParent">

    <TextView
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="Device Configuration"
        />

    <TextView
        android:visibility="visible"
        android:padding="20dp"
        android:id="@+id/step0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="1. Power up Dome device or press reset button on the board"
        />

    <TextView
        android:id="@+id/step1"
        android:visibility="gone"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="2. From your phone WiFi settings join  DomeDevice-xxxxx network"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/step2"
        android:visibility="gone"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3. Enter your home WiFi network credentials"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/wifiSSID"
        android:visibility="gone"
        android:padding="20dp"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mywifissid"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/wifipass"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:hint="@string/mywifipassword"
        android:layout_gravity="center"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/step3"
        android:visibility="gone"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@android:color/transparent"
        android:hint="@string/mywifissid"
        android:text="@string/_4_tap_on_configure_device_button_below"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/buttonConfigure"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:layout_gravity="center"
        android:text="@string/configure_device"
        />
    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:text="@string/next_step"
        android:drawablePadding="8dp"
        android:elevation="5dp"
        android:drawableEnd="@drawable/baseline_arrow_forward_24"
        android:layout_gravity="bottom|right"/>
</LinearLayout>
