<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true"

    android:orientation="vertical"
    android:focusable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:longClickable="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:longClickable="true"
            android:text="@string/power_meter_title"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textColor="@color/teal_700"
            android:clickable="true"
            android:background="@android:color/transparent"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textSize="30sp"
            android:singleLine="true"
            android:focusable="true" />

        <EditText
            android:id="@+id/emon_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:gravity="center|center_vertical"
            android:imeActionLabel="Save"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:singleLine="true"
            android:text="@string/power_category_pref"
            android:textAlignment="center"
            android:textColor="#696969" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:padding="30dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/power_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:drawableStartCompat="@drawable/outline_bolt_36"
                android:textSize="40sp"
                tools:ignore="RtlSymmetry"

                />
            <TextView
                android:id="@+id/impactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Low"
                >

            </TextView>

        </LinearLayout>



        <me.tankery.lib.circularseekbar.CircularSeekBar
            android:id="@+id/power_seekbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            app:cs_circle_color="#55606060"
            app:cs_circle_progress_color="@color/teal_700"
            app:cs_circle_stroke_width="10dp"
            app:cs_end_angle="40"
            app:cs_start_angle="-220" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:paddingTop="280dp"
            android:text="@string/energy_consumption"
            android:textSize="24sp"
        />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_consumption"
            android:paddingStart="30dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="30dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/energy_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:paddingStart="30dp"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly_summary"
            android:textSize="20sp"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/summaryProgressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="30dp"
                    />
                <LinearLayout
                    android:id="@+id/summaryLayout"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:layout_height="wrap_content">

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
</ScrollView>