<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    android:focusable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:longClickable="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/thermostat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:longClickable="true"
            android:text="@string/thermostat"
            android:imeActionLabel="Save"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:textColor="@color/teal_700"
            android:clickable="true"
            android:background="@android:color/transparent"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textSize="30sp"
            android:singleLine="true"
            android:focusable="true" />

        <EditText
            android:id="@+id/thermostat_descr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:gravity="center|center_vertical"
            android:imeActionLabel="Save"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:singleLine="true"
            android:text="Cucina"
            android:textAlignment="center"
            android:textColor="#696969" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/temp_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="20.3"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />

        <me.tankery.lib.circularseekbar.CircularSeekBar
            android:id="@+id/cs"
            app:cs_pointer_color = "@color/teal_200"
            app:cs_pointer_alpha_ontouch = "100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cs_pointer_stroke_width = "20dp"
            app:cs_circle_color="@color/light_grey"
            app:cs_circle_progress_color="@color/teal_700"
            app:cs_pointer_halo_color_ontouch = "@color/teal_700"
            app:cs_circle_stroke_width="10dp"
            app:cs_end_angle="40"
            app:cs_start_angle="-220" />


    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mode_selector"
        style="@style/ThermostatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="20dp"
        android:gravity="center"
        android:text="Curent mode: auto"
        android:textColor="#626262"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/indoor_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingStart="48dp"
            android:text="@string/indoor_uppsercase_text"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/outline_thermostat_24"
            app:drawableTint="#737373"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/temp_val_tw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/indoor_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingStart="48dp"
            android:text="20.1C"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/humidity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:paddingEnd="48dp"
            android:text="@string/humidity_uppercase"
            android:textSize="15sp"
            app:drawableTint="#737373"
            app:drawableStartCompat="@drawable/ic_water_grey"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/hum_value_tw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/humidity_text"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:paddingEnd="48dp"
            android:text="50.00%"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>


</LinearLayout>
</ScrollView>